Integração entre o WebServer e o BancoDeDados utilizando VMs

--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -31,7 +31,7 @@
     </div>
 
     <script>
-      const apiUrl = "http://localhost:8080/cadastro/cadastrar";
+      const apiUrl = "http://192.168.23.129:8080/cadastro/cadastrar";
 
       function addContato() {
         const campos = [
