--- a/src/main/resources/templates/editar.html
+++ b/src/main/resources/templates/editar.html
@@ -31,7 +31,7 @@
     </div>
 
     <script>
-      const apiUrl = "http://localhost:8080/contatos/editar";
+      const apiUrl = "http://192.168.23.129:8080/contatos/editar";
       const contato = JSON.parse(localStorage.getItem("contatoEditando"));
 
       if (contato) {
