Correção botão voltar

--- a/src/main/resources/templates/cadastro.html
+++ b/src/main/resources/templates/cadastro.html
@@ -104,7 +104,7 @@
       }
 
       function voltar() {
-        window.location.href = "home.html";
+        window.location.href = "/";
       }
     </script>
   </body>
