--- a/src/main/resources/templates/contatos.html
+++ b/src/main/resources/templates/contatos.html
@@ -109,7 +109,7 @@
       }
 
       function voltar() {
-        window.location.href = "home.html";
+        window.location.href = "/";
       }
 
       loadContatos();
